--- a/ConfSample/extfile.cnf
+++ b/ConfSample/extfile.cnf
@@ -1,1 +1,1 @@
-﻿subjectAltName=DNS:*.local.com,DNS:*.msccruises.local.com,DNS:*.nrf.local.com,DNS:*.nrf10.local,DNS:*.jnj.local.com,DNS:*.abrdn.local.com
+﻿subjectAltName = DNS:*.local.com,DNS:*.mysite.local.com
